# calm-qa-dashboard

./: README.md  index.html  package.json  vite.config.js
.github/workflows/: build.yml
src/: App.jsx  api.js  config.js  styles.css  transform.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
